# score-addon-led

./: .clang-format  CMakeLists.txt  README.md  addon.json  release.sh  score_addon_led.cpp  score_addon_led.hpp
.github/workflows/: jit.yml
Led/: Device.cpp  Device.hpp  ProtocolFactory.cpp  ProtocolFactory.hpp  ProtocolSettingsWidget.cpp  ProtocolSettingsWidget.hpp  SpecificSettings.hpp  SpecificSettingsSerialization.cpp
LedDevice/: LEDOutputDevice.cpp  LEDOutputDevice.hpp
LedProcesses/: LedFX.hpp
